<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textFoodNameE"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editFoodNameE"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edit_food_name"
                android:inputType="text|textPersonName"
                android:selectAllOnFocus="false"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCaloriesE"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Calories"
                android:textColor="@color/colorAccent"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editCaloriesE"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/CaloriesHit"
                android:inputType="textPersonName|number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textFatE"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fat"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editFatE"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fatHint"
                android:inputType="textPersonName|number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCarbohydrateE"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Carbohydrate"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editCarbohydrateE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/CarbohydrateHint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textProteinE"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Protein"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editProteinE"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ProteinHint"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDateE"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Date"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editDateE"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/DateHint"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTimeE"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Time"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

            <EditText
                android:id="@+id/editTimeE"
                style="@android:style/Widget.DeviceDefault.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="@color/colorAccent"
                android:text="@string/update" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>